# surrogate_model_wing_weight

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SCE_report_oldopp.ipynb  pyproject.toml  requirements.txt
docs/: Makefile  conf.py  example.ipynb  make.bat
src/surrogate_model_wing_weight/: __init__.py  surrogate_model_wing_weight.py
tests/: test_surrogate_model_wing_weight.py
