[tool.poetry]
name = "surrogate_model_wing_weight"
version = "0.1.0"
description = "predicts the wing weight of a light aircraft by using 3 different regression models."
authors = ["Franz Oldopp"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
